[gd_scene load_steps=5 format=3 uid="uid://dy5v38r7yx1n7"]

[ext_resource type="Texture2D" uid="uid://y62q8404eusf" path="res://Assets/Sprites/asteroids-2x.png" id="1_f7j2g"]
[ext_resource type="Script" path="res://Assets/Scripts/ufo.gd" id="1_vji0b"]
[ext_resource type="PackedScene" uid="uid://y1rxt1upbncm" path="res://Assets/Scenes/bullet_ufo.tscn" id="2_7dlxn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rof6a"]
radius = 24.0

[node name="ufo" type="Node2D"]
script = ExtResource("1_vji0b")
ufo_bullet = ExtResource("2_7dlxn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f7j2g")
region_enabled = true
region_rect = Rect2(416, 160, 96, 80)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rof6a")

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.95
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
